# PerFoRo-ROS

./: README.md
PerFoRo-Control/: CMakeLists.txt  package.xml
PerFoRo-Control/launch/: PerFoRoControl.launch
PerFoRo-Control/msg/: MODE.msg  NavigatePerFoRo.msg  SelectTarget.msg  single_waypoint.msg~  waypoint.msg~  waypoints.msg~
PerFoRo-Control/src/: PerFoRoControl.cpp  PerFoRoControl.h  mode_manager.cpp~  mode_manager.h~  wp_manager.cpp~  wp_manager.h~
WebApp/: Command-PerFoRo-SmartPhone.html  Command-PerFoRo.html
WebApp/css/: WireOne.css  style.css
